[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsideo"
version = "0.1.0"
description = "Python SDK for OSD (Operation Save Data) decentralized storage protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OSD Labs", email = "info@osdlabs.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
keywords = ["ml", "machine-learning", "storage", "decentralized", "blockchain", "datasets"]
requires-python = ">=3.8"
dependencies = [
    "blake3>=0.4.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
data = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]
ml = [
    "torch>=1.12.0",
    "tensorflow>=2.8.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "twine>=4.0.0",
]
all = [
    "obsideo[data,ml]",
]

[project.urls]
Homepage = "https://github.com/osdlabs/obsideo"
Documentation = "https://obsideo.readthedocs.io"
Repository = "https://github.com/osdlabs/obsideo"
"Bug Tracker" = "https://github.com/osdlabs/obsideo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["obsideo*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]